--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_API_KEY = ""
+GOOGLE_API_KEY = "AIzaSyDaUzWnAuFZDx1O6J_Xc_AEcZwkiW0aOOE"
 
-OPENAI_API_KEY = ""
+OPENAI_API_KEY = "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"
 
